src/objects/c2g__codaUserCompany__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpusercompany</customHelpPage>
    <description>Each user company record grants an individual user access to a single company.</description>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The available company</description>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>User Companies</relationshipLabel>
        <relationshipName>UserCompanies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UseLocalAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then the user should be allowed to enter only local GLAs otherwise corporate GLA.</description>
        <inlineHelpText>If checked then the user should be allowed to enter only local GLAs otherwise corporate GLA.</inlineHelpText>
        <label>Use Local Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who owns this record</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserCompanies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Company</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Company__c</columns>
        <columns>c2g__User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>Permission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>